syntax = "proto3";
package Inner_Basic;
option module = 2;